# mytorch

./: README.md  pyproject.toml
experiments/: compare_real_training.py  embedding_nn_train.py  eval_small_model.py  ff_profiling.py  inference_test.py  matmul_kernel.py  simple_nn_train.py  small_language_model.py  small_language_model_v2.py
mytorch/: gpu_layers.py  gpu_tensor.py  inference.py  kernels.py  layers.py  linkedarray.py  operations.py  optimizers.py  pairdata.py  tensor.py  tokenizers.py  trie.py
mytorch/tokenizers/: linkedarray.py  pairdata.py  tokenizers.py
scripts/: run_inference.py  tokenize_wiki.py  train_model.py
tests/: conftest.py  test_gpu_layers.py  test_gpu_tensor.py  test_kernels.py  test_layers.py  test_linkedarray.py  test_tensor.py  test_tokenizers.py  test_trie.py  utils.py
